CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT (WebSocketServer)

SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_VERBOSE_MAKEFILE true)
SET(LIB_DIR /home/httpd/lib)
SET(XLIB_DIR /home/httpd/src/app/lib)
SET(COMMON_DIR /home/httpd/src/app/common)
SET(INCLUDE_DIR /home/httpd/include)
SET(SRC_FILES 
        websocket.cpp
        Core.cpp
        Base.cpp
        Session.cpp
        ${XLIB_DIR}/Log.cpp
        ${COMMON_DIR}/Crypt.cpp
        ${COMMON_DIR}/base64.cpp
    )
SET(Boost_USE_STATIC_LIBS TRUE)
SET(TARGET websocket)

SET(CMAKE_C_COMPILER "g++")
ADD_COMPILE_OPTIONS(-std=c++11 -g -Wall)

FIND_PACKAGE(Boost 1.72.0 COMPONENTS system log log_setup thread REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${INCLUDE_DIR} ${LIB_DIR} ${XLIB_DIR} ${COMMON_DIR})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

LINK_LIBRARIES(pthread -static)

SET (CMAKE_C_FLAGS_DEBUG "-DDEBUG -DC_FLAGS")
SET (CMAKE_EXE_LINKER_FLAGS_DEBUG "-DDEBUG -DLINKER_FLAGS")

SET (CMAKE_C_FLAGS_RELEASE "-DRELEASE -DC_FLAGS")
SET (CMAKE_EXE_LINKER_FLAGS_RELEASE "-DRELEASE -DLINKER_FLAGS")

ADD_EXECUTABLE(${TARGET} ${SRC_FILES})
TARGET_LINK_LIBRARIES(${TARGET} ${Boost_LIBRARIES} ${LIB_DIR}/libcrypto.a ${LIB_DIR}/libssl.a ${CMAKE_DL_LIBS})

INSTALL(TARGETS ${TARGET} DESTINATION /home/httpd/bin)

